[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Splatch.gd" type="Script" id=1]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 1, 0.968645, 1, 0.401236, 0.517318, 0.62632, 1 )

[sub_resource type="CircleShape2D" id=6]
radius = 30.0167

[node name="Splatch" type="Area2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
scale = Vector2( 1.7, 1.7 )
amount = 350
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
damping = 100.0
damping_random = 0.2
angle = 383.1
angle_random = 0.39
color_ramp = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Splatch_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
